[package]
name = "littlefs2-core"
version = "0.1.0"
authors = ["The Trussed developers"]
description = "Core types for the littlefs2 crate"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2.6.0"
heapless07 = { package = "heapless", version = "0.7", optional = true }
heapless08 = { package = "heapless", version = "0.8", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[features]
heapless07 = ["dep:heapless07"]
heapless08 = ["dep:heapless08"]
serde = ["dep:serde"]
